--- a/Customer Churn Prediction.ipynb
+++ b/Customer Churn Prediction.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "This notebook details the exploration and analysis of customer data from a video subscription company.\n",
     "\n",
+    "**NOTE: THE ACTUAL PROPRIETARY DATASETS HAVE NOT BEEN INCLUDED SINCE IT BELONGS TO THE COMPANY WHICH DESIRES TO REMAIN ANONYMOUS**\n",
+    "\n",
     "Main objective: \n",
     "Can we assign a likelihood percentage to each of our customers to measure their likelihood to churn within the next 30 days given their activity in the previous 30 days?\n",
     "\n",
